--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,210 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #D8B4E2;
+  color: #210b2c;
+  font-family: monospace;
+  font-size: 15px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login-section {
+  background-image: url("./Untitled.jpeg");
+  height: 685px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  margin: 0;
+}
+
+h2 {
+  font-family: monospace;
+  font-size: 1.9vw;
+}
+
+.login-input {
+  backdrop-filter: blur(12px) saturate(150%);
+  -webkit-backdrop-filter: blur(12px) saturate(150%);
+  background-color: rgba(17, 25, 40, 0.5);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  padding: 40px;
+  margin: 0 20% 60% 60%;
+  color: white;
+}
+
+.login-button {
+  outline: 0;
+  grid-gap: 8px;
+  align-items: center;
+  background-color: #ff90e8;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-flex;
+  flex-shrink: 0;
+  font-size: 16px;
+  gap: 8px;
+  justify-content: center;
+  line-height: 1.5;
+  overflow: hidden;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  transition: all .14s ease-out;
+  white-space: nowrap;
+  margin-top: 20px;
+  font-family: monospace;
+}
+
+.login-button:hover {
+  box-shadow: 4px 4px 0 #000;
+  transform: translate(-4px,-4px);
+}
+
+.login-button:focus-visible{
+  outline-offset: 1px;
+}
+
+.login-button:disabled {
+  background-color: #868686;
+}
+
+.input-login-box {
+  margin: 5px;
+  padding: 10px;
+  font-size: 15px;
+  border-width: 1px;
+  border-color: #b313a3;
+  background-color: #FFFFFF;
+  color: #000000;
+  border-style: groove;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(194,35,192,.75);
+  font-family: monospace;
+}
+
+.form-field {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 30px;
+  border: 2px solid black;
+  border-width: 2px 0;
+  padding: 20px;
+  align-items: center;
+}
+
+.header-class {
+  display: flex;
+  justify-content: space-between;
+  background-color: #ae759f;
+  padding: 0 70px;
+  align-items: center;
+}
+
+.header-value {
+  display: flex;
+}
+
+.user-input {
+  margin: 5px;
+}
+
+.user-value-input {
+  margin: 0 5px 0 0;
+  width: 80px;
+}
+
+.user-desc-input {
+  width: 250px;
+}
+
+.add-edit-button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border: 1px solid #000;
+  border-radius: 3px;
+  color: #000;
+  background: #D8B4E2;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 5px;
+  text-align:center;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  margin-left: 10px;
+}
+
+.add-edit-button:hover{
+  background: #ae759f;
+}
+
+.table-wallet {
+  width: 100%;
+}
+
+.table-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+  border-width: 0 0 2px 0;
+}
+
+td, th {
+  text-align: center;
+  width: 10%;
+}
+
+.button-edit {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: black;
+  background: #D8B4E2;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 5px;
+  text-align:center;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+}
+
+.button-edit:hover{
+  color: #000;
+  background: rgb(255, 218, 87);
+}
+
+.button-delete {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: black;
+  background: #D8B4E2;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 5px 27.5px;
+  text-align:center;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  margin-top: 2px;
+}
+
+.button-delete:hover{
+  color: #000;
+  background: red;
 }
